@@ -2849,7 +2849,7 @@ AT_CLEANUP
 AT_SETUP([NX_PACKET_IN2])
 AT_KEYWORDS([ofp-print])
 AT_CHECK([ovs-ofctl ofp-print "
-01 04 0088 00000000 00002320 0000001e
+01 04 0098 00000000 00002320 0000001e
 0000 0034
   82 82 82 82 82 82 80 81 81 81 81 81 81 00 00 50
   08 00 45 00 00 28 00 00 00 00 00 06 32 05 53 53
@@ -2859,9 +2859,12 @@ AT_CHECK([ovs-ofctl ofp-print "
 0003 0005 07   000000
 0004 0010 00000000   fedcba9876543210
 0005 0005 01   000000
-0006 0010 80000408 5a5a5a5a5a5a5a5a"
+0006 0010 80000408 5a5a5a5a5a5a5a5a
+0007 0009 0102030405  00000000000000
+"
 ], [0], [dnl
 NXT_PACKET_IN2 (xid=0x0): table_id=7 cookie=0xfedcba9876543210 total_len=64 metadata=0x5a5a5a5a5a5a5a5a (via action) data_len=48 buffer=0x00000114
+ userdata=01.02.03.04.05
 ip,dl_vlan=80,dl_vlan_pcp=0,dl_src=80:81:81:81:81:81,dl_dst=82:82:82:82:82:82,nw_src=0.0.0.0,nw_dst=0.0.0.0,nw_proto=0,nw_tos=0,nw_ecn=0,nw_ttl=0
 ])
 AT_CLEANUP
